<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsFragment">

    <ImageView
        android:id="@+id/art_image_view"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/art_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/artist_text"
        app:layout_constraintStart_toStartOf="@+id/art_image_view"
        app:layout_constraintTop_toBottomOf="@+id/art_image_view" />

    <EditText
        android:id="@+id/artist_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="artist"
        android:ems="10"
        android:hint="@string/enter_artist"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/year_text"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <EditText
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:autofillHints="year"
        android:ems="10"
        android:hint="@string/enter_year"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="@+id/artist_text"
        app:layout_constraintTop_toBottomOf="@+id/artist_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text" />

</androidx.constraintlayout.widget.ConstraintLayout>